# uc-intg-eversolo

./: .gitignore  BUGFIX_REPORT_v1.3.3.md  Custom - learned IR codes_Eversolo DMP-A6_codeset_2026-02-04.csv  DISCOVERY_ANALYSIS.md  Dockerfile  README.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  VALIDATION_REPORT.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  read_excel_api.py  requirements.txt  test_buttons.py  test_fixes.py  test_lights.py  test_sensors.py  tmpclaude-60eb-cwd  validate_api_comprehensive.py  validate_fixes.py  validate_fixes_ascii.py  validate_line_by_line.py
.github/workflows/: build.yml
intg_eversolo/: __init__.py  __main__.py  config.py  device.py  device_extensions.py  driver.py  light.py  media_player.py  output_buttons.py  remote.py  remote_a10.py  remote_a6.py  remote_a8.py  select.py  sensor.py  setup_flow.py
tests/: test_e2e_integration.py
tools/: eversolo-discovery.py
uc_intg_eversolo/: __init__.py  __main__.py  config.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup_flow.py
