[project]
name = "uc-intg-eversolo"
dynamic = ["version"]
description = "Eversolo integration for Unfolded Circle Remote"
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}

dependencies = [
    "ucapi-framework>=1.8.3",
    "ucapi>=0.5.2",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["intg_eversolo"]

[tool.setuptools.dynamic]
version = {attr = "intg_eversolo.__version__"}
